--- a/Module/Module3/index.html
+++ b/Module/Module3/index.html
@@ -52,7 +52,7 @@
 </section>
 </header>
 <!-- jQuery (Bootstrap JS plugins depend on it) -->
-<script src="js/jquery-3.1.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/script.js"></script>
 </body>
